# fcc-hard-carbon-optimizer.

5_fcc-hard-carbon-optimizer/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  app.py  cli.py  pyproject.toml  requirements.txt
5_fcc-hard-carbon-optimizer/docs/: API.md  PUBLISHING.md
5_fcc-hard-carbon-optimizer/docs/images/: README.md
5_fcc-hard-carbon-optimizer/examples/: quickstart.ipynb
5_fcc-hard-carbon-optimizer/src/fcc_hard_carbon/: __init__.py  cli.py  economics.py  models.py  optimization.py
5_fcc-hard-carbon-optimizer/src/fcc_hard_carbon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
5_fcc-hard-carbon-optimizer/tests/: conftest.py  test_economics.py  test_models.py  test_optimization.py
