[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fcc-hard-carbon"
version = "1.0.0"
description = "Process optimization tool for producing hard carbon anode materials from FCC decant oil for Na-ion batteries"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "FCC Hard Carbon Contributors"}
]
maintainers = [
    {name = "FCC Hard Carbon Contributors"}
]
keywords = [
    "hard-carbon",
    "sodium-ion-battery",
    "anode-material",
    "FCC-decant-oil",
    "process-optimization",
    "carbonization",
    "battery-materials",
    "energy-storage"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=5.0",
    "black>=23.0",
]
dashboard = [
    "streamlit>=1.20.0",
    "pandas>=1.3.0",
    "plotly>=5.0.0",
]
all = [
    "fcc-hard-carbon[dev,dashboard]",
]

[project.scripts]
fcc-hard-carbon = "fcc_hard_carbon.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/fcc-hard-carbon-optimizer"
Documentation = "https://github.com/yourusername/fcc-hard-carbon-optimizer#readme"
Repository = "https://github.com/yourusername/fcc-hard-carbon-optimizer.git"
Issues = "https://github.com/yourusername/fcc-hard-carbon-optimizer/issues"
Changelog = "https://github.com/yourusername/fcc-hard-carbon-optimizer/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fcc_hard_carbon = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/fcc_hard_carbon --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist", "*.egg-info"]
